Unable to Ungroup group nodes #94357

Closed
opened 2021-12-24 04:07:45 +01:00 by Erindale · 8 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.39

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-23 00:38, hash: 1931387799
Worked: (newest version of Blender that worked as expected)

Short description of error
When using the ungroup operator either through the shortcut or menu the group rather than ungrouping, just duplicates your current node tree.
2021-12-24 03-01-39.mp4

Exact steps for others to reproduce the error
Create a node group with any nodes in any node editor and attempt to ungroup it.

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.39 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-23 00:38, hash: `1931387799` Worked: (newest version of Blender that worked as expected) **Short description of error** When using the ungroup operator either through the shortcut or menu the group rather than ungrouping, just duplicates your current node tree. [2021-12-24 03-01-39.mp4](https://archive.blender.org/developer/F12773842/2021-12-24_03-01-39.mp4) **Exact steps for others to reproduce the error** Create a node group with any nodes in any node editor and attempt to ungroup it.
Author

Added subscriber: @Erindale

Added subscriber: @Erindale
Author

Also assigning this to Asset Browser because I think it's probably related to node groups throwing this error when trying to append / link:
image.png

Also assigning this to Asset Browser because I think it's probably related to node groups throwing this error when trying to append / link: ![image.png](https://archive.blender.org/developer/F12773853/image.png)

Added subscribers: @HooglyBoogly, @deadpin

Added subscribers: @HooglyBoogly, @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

A git bisect seems to point towards fdc4a1a590 as the culprit for the Ungroup issue.

CC @HooglyBoogly

A git bisect seems to point towards fdc4a1a590 as the culprit for the Ungroup issue. CC @HooglyBoogly
Hans Goudey self-assigned this 2021-12-24 05:48:13 +01:00
Member

Thanks again for catching a mistake! I'm not sure about the issue with assets you mentioned, it seems to work okay for me. If that's still there, could you submit a separate report about that?

Thanks again for catching a mistake! I'm not sure about the issue with assets you mentioned, it seems to work okay for me. If that's still there, could you submit a separate report about that?

This issue was referenced by 81b3933abb

This issue was referenced by 81b3933abbbff4844253c04eeaf1ede672dcb566
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94357
No description provided.