Fix T94357: Node Ungroup operator copies current node tree

This was a mistake in rBfdc4a1a590d8befb1ff which copied the parent
node tree into itself rather than accessing the node group's nodes.